--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
+.content{
+  width: 100%;
+  height: 100vh;
+  background: url('./public/back-login.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  /* background-color: aqua; */
+}
+.login-box{
+  position: absolute;
+  width: 400px;
+  height: 300px;
+  background-color: rgba(146,165,172, 0.6);
+  top:180px;
+  left: 180px;
+  border-radius: 3%;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.login-box p{
+  color: aliceblue;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inputinner{
+  width: 300px;
+  height: 30px;
+  margin-top: 30px;
+  border-radius: 5%;
+  background-color: rgba(197, 209, 209, 0.6);
+  color: aliceblue;
+  font-size: 20px;
 }
