--- a/src/App.css
+++ b/src/App.css
@@ -18,14 +18,13 @@
   text-align: center;
 }
 .login-box p{
+  margin-top: 20px;
   color: aliceblue;
+  font-size: large;
 }
-.inputinner{
+.button{
   width: 300px;
   height: 30px;
   margin-top: 30px;
-  border-radius: 5%;
-  background-color: rgba(197, 209, 209, 0.6);
-  color: aliceblue;
-  font-size: 20px;
+  opacity: .8;
 }
