新增耗材查询

--- a/src/pages/remind/index.less
+++ b/src/pages/remind/index.less
@@ -1,3 +1,7 @@
-.remind_card{
-  margin: 15px 15px;
+.remind_box{
+  height: 800px;
+  overflow: auto;
+  .remind_card{
+    margin: 15px 15px;
+  }
 }
