--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -16,5 +16,16 @@
             color: white;  
             font-family: '幼圆';
         }
-    }
+        .usericon{
+          width: 50px;
+          height: 50px;
+          position: relative;
+          float: right;
+          margin-top: 15px;
+          margin-right: 12px;
+        }
+        .usericon:hover{
+          border: 1px solid rgb(17, 8, 143);
+        }
+    }   
 }
