--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -4,27 +4,43 @@
     background-color: rgb(12, 57, 117);
     .head_left{
         .icon{
-            width: 60px;
-            margin-top: 10px;
+            width: 40px;
+            margin-top: 18px;
             margin-left: 10px;
         }
         span{
             font-size: 25px;
-            margin-left: 10px;
+            margin-left: 20px;
             position: relative;
             top:10px;  
             color: white;  
             font-family: '幼圆';
         }
         .usericon{
-          width: 50px;
-          height: 50px;
+          width: 30px;
           position: relative;
           float: right;
-          margin-top: 15px;
-          margin-right: 12px;
+          margin-top: 20px;
+          margin-right: 20px;
+          margin-left: 15px;
         }
+          .info{
+            width: 27px;
+            position: relative;
+            float: right;
+            
+          }
+          .infoicon{
+            width: 27px;
+            position: relative;
+            float: right;
+            margin-top: 6px;
+            margin-right: 0px;
+          }
         .usericon:hover{
+          border: 1px solid rgb(17, 8, 143);
+        }
+        #hovericon:hover{
           border: 1px solid rgb(17, 8, 143);
         }
     }   
