++ 封装table ++ 完善大部分板块

--- a/src/components/table/table.less
+++ b/src/components/table/table.less
@@ -8,13 +8,26 @@
   height: 30%;
   // background-color: rgb(85, 88, 88);
 }
-.tr{
+.singletr{
   height: 75/3%;
-  border-bottom: 1px solid gray;
+  background-color: rgba(68, 64, 64, 0.692);
+  &:hover{
+    background-color: rgba(158, 154, 154, 0.541);
+  }
 }
-.tr:hover{
-  background-color: rgba(128, 128, 128, 0.541);
+.doubletr{
+  height: 75/3%;
+  background-color: rgba(133, 127, 127, 0.692);
+  &:hover{
+    background-color: rgba(158, 154, 154, 0.541);
+  }
 }
 aa{
   color: rgba(52, 52, 59, 0.493);
+}
+.nodata{
+  font-size: 22px;
+  height: 200px;
+  line-height: 200px;
+  text-align: center;
 }
