--- a/src/pages/mapToielt/index.less
+++ b/src/pages/mapToielt/index.less
@@ -1,7 +1,9 @@
-.map_card{
-  margin: 15px 15px;
-  .map{
-    width: auto;
-    height: 500px;
+.bg{
+  .button{
+    width: 70px;
+    margin-left: 10px;
   }
+}
+.mt{
+  margin-top: 10px;
 }
