--- a/src/pages/homeIndex/index.less
+++ b/src/pages/homeIndex/index.less
@@ -1,6 +1,7 @@
 .warp_content{
     .inner-card{
         margin: 15px 15px;
+        border-radius: 5px;
         .progress_box{
             float: left; 
             margin-left: 120px; 
