优化数据结构，优化UI层

--- a/src/pages/homeIndex/index.less
+++ b/src/pages/homeIndex/index.less
@@ -2,9 +2,10 @@
     .inner-card{
         margin: 15px 15px;
         border-radius: 5px;
+        // display: flex;
         .progress_box{
-            float: left; 
             margin-left: 120px; 
+            flex: 1;
             .description_style{
                 margin-left: 22px;
                 margin-top: 10px;
@@ -13,4 +14,7 @@
         }
         
     }
+}
+.progress_warp{
+  display: flex;
 }
