--- a/src/pages/stuff-relation/stuff-relation.less
+++ b/src/pages/stuff-relation/stuff-relation.less
@@ -39,3 +39,47 @@
     display: block;
   }
 }
+.base_info{
+  background-color: rgba(202, 201, 199, 0.281);
+  border-left: 2px solid blue;
+  padding-left: 5px;
+  margin-bottom: 5px;
+  height: 40px;
+  line-height: 40px;
+  &:hover{
+    background-color: rgba(202, 201, 199, 0.541);
+  }
+}
+.sg{
+  list-style: none;
+  padding: 0;
+  margin-left: 12px;
+  margin-top: 20px;
+}
+.liitem{
+  margin-bottom: 15px;
+}
+.sg_in{
+  border: 1px solid rgb(179, 176, 172);
+  position: absolute;
+  left: 20%;
+  width: 200px;
+}
+.card{
+  height: 600px;
+}
+.save{
+  position: relative;
+  top: 64px;
+  left: 12px;
+  width: 150px;
+  text-align: center;
+  border: 1px solid rgb(167, 166, 149);
+  user-select: none;
+  &:hover{
+    background-color: rgb(133, 141, 141);
+  }
+  &:active{
+    background-color: rgba(133, 141, 141, 0.438);
+  }
+}
