优化数据结构

--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -7,13 +7,15 @@
   background-size: cover;
   position: relative;
   /* background-color: aqua; */
+  display: flex;
+  align-items: center;
 }
 .login-box{
   position: absolute;
   width: 400px;
   height: 300px;
   background-color: rgba(146,165,172, 0.6);
-  top:180px;
+  // top:180px;
   left: 180px;
   border-radius: 3%;
   text-align: center;
