--- a/src/common/common.less
+++ b/src/common/common.less
@@ -10,3 +10,49 @@
   width: 100%;
   height: 400px;
 }
+// wh100p
+.wh100p{
+  width: 100%;
+  height: 100%;
+}
+.w100p{
+  width: 100%;
+}
+.h100p{
+  height: 100%;
+}
+// 滚轴
+.scroll{
+  overflow: auto;
+}
+// flex布局
+.fbv{
+  display: flex;
+  flex-direction: column;
+}
+.fbh{
+  display: flex;
+}
+.fbac{
+  align-items: center;
+}
+.fbjc{
+  justify-content: center;
+}
+.fbjsb{
+  justify-content: space-between;
+}
+// 字体
+.fcw{
+  color: white;
+}
+.fs12{
+  font-size: 12px;
+}
+.bold{
+  font-weight: bold;
+}
+// 取消复制操作
+.usn{
+  user-select: none;
+}
