修改布局等细节

--- a/src/common/common.less
+++ b/src/common/common.less
@@ -10,6 +10,12 @@
   width: 100%;
   height: 400px;
 }
+.pr{
+  position: relative;
+}
+.pa{
+  position: absolute;
+}
 // wh100p
 .wh100p{
   width: 100%;
@@ -42,6 +48,9 @@
 .fbjsb{
   justify-content: space-between;
 }
+.fbsr{
+  justify-content: space-around;
+}
 // 字体
 .fcw{
   color: white;
@@ -49,10 +58,20 @@
 .fs12{
   font-size: 12px;
 }
+.fs20{
+  font-size: 20px;
+}
 .bold{
   font-weight: bold;
 }
 // 取消复制操作
 .usn{
   user-select: none;
+}
+.p2{
+  padding: 2px 2px 2px 2px;
+}
+//scrollbar
+.scroller{
+  overflow: auto;
 }
